# URL_lookup_service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: CI.yml
migration/: 001_create_malware_urls.sql
migrations/: 001_create_malware_urls.sql
src/: core.py  db.py  main.py  migration.py  models.py  storage.py
tests/: conftest.py  test_core.py
