[project]
name = "malware-api"
version = "0.1.0"
description = "Malware URL checking API"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg[binary]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

# -----------------------
# Ruff (your original config)
# -----------------------
[tool.ruff]
line-length = 120
target-version = "py312"

select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports)
    "B",   # flake8-bugbear (common bugs)
    "I",   # isort (import order)
    "UP",  # pyupgrade (modern Python)
    "C4",  # flake8-comprehensions (readability)
]

ignore = [
    "E501",
]

# -----------------------
# Pytest (optional but nice)
# -----------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
